--- a/main.css
+++ b/main.css
@@ -1,32 +1,31 @@
 header {
-    background-color: lightskyblue;
+    background-color: rgb(31,74,83);
     padding: 10px;
     text-align: center;
 }
 
-header > h1 {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    background-color: rgb(31,74,83);
 }
 
-header > address {
-    color: white;
+header>div {
+    color: rgb(187,195,144);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
-    background-color: rgb(119, 180, 218);
+    background-color: rgb(226,204,121);
     padding: 10px;
 }
 
-nav > a {
+nav>a {
     color: white;
-    background-color: rgb(92, 140, 170);
+    background-color: rgb(156,66,57);
     padding: 5px;
 }
 
 main {
-    background-color: rgb(179, 226, 255);
+    background-color: rgb(61,24,42);
     padding: 0px 0px 10px 0px;
 }
 
@@ -35,11 +34,48 @@ li {
     list-style-type: none;
 }
 
-li > strong {
+li>strong {
     font-size: 25px;
 }
 
-ul > li > strong, ul > li > a {
+ul>li>strong,
+ul>li>a {
     font-size: 20px;
     margin: 0px 0px 0px -20px;
+}
+
+ol {
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 40px;
+}
+
+ol>li{
+    float: left;
+    background-color: rgb(226,204,121);
+    width: 250px;
+    height: 250px;
+    padding: 20px;
+    color: rgb(31,74,83);
+    
+}
+
+li>img {
+    width: 100%;
+    height: 100%;
+}
+
+.major {
+    width: 100%;
+    padding: 0px;
+    padding: 20px 0px 0px 20px;
+    background-color: inherit;
+    color: rgb(226,204,121);
+}
+
+footer {
+    background-color: rgb(226,204,121);
+    padding: 10px 0px 0px 10px;
+    color: rgb(31,74,83);
 }
